// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderItemText renders clipped styling if provided 1`] = `
<span
  className="c-chrome__body__header__item__text is-clipped "
  data-garden-id="chrome.header_item_text"
  data-garden-version="version"
/>
`;

exports[`HeaderItemText renders default styling 1`] = `
<span
  className="c-chrome__body__header__item__text "
  data-garden-id="chrome.header_item_text"
  data-garden-version="version"
/>
`;
